# mcc

./: .gitignore  Cargo.toml  TODO  flake.nix  shell.nix  test_compiler
asm/: Cargo.toml
asm/src/: lib.rs  tacky.rs  x86.rs
ast/: Cargo.toml
ast/src/: attr.rs  c_vals.rs  expr.rs  labeled.rs  lib.rs  parse.rs  semantics.rs  token.rs  typed.rs  var_type.rs
ast/src/semantics/: labeled.rs  (+1 more)
mcc/: Cargo.toml
mcc/src/: args.rs  codegen.rs  lex.rs  lib.rs  main.rs  parse.rs  semantics.rs
mcc/src/codegen/: assembly.rs  pseudo_pass.rs  tacky_opt.rs  tacky_pass.rs  x86_pass.rs
mcc/src/codegen/assembly/: tacky.rs  x86.rs
mcc/src/codegen/tacky_opt/: cfg.rs  constant_fold.rs  eliminate_unreachable.rs
mcc/src/codegen/x86_pass/: rule.rs
mcc/src/parse/: ast.rs  specifier_list.rs
mcc/src/semantics/: ast.rs  check_labels.rs  check_switch.rs  resolve.rs  resolve_loops.rs  typecheck.rs
mcc/src/semantics/resolve/: var_map.rs
mcc/src/types/: ast.rs
mcc/src/types/ast/: parse.rs
src/: ast.rs  c_types.rs  codegen.rs  compiler.rs  lex.rs  lib.rs  main.rs  parse.rs  semantics.rs  slice_iter.rs  types.rs
src/codegen/: assembly.rs  pseudo_pass.rs  tacky_pass.rs  x86_pass.rs
src/compiler/: codegen.rs  lex.rs  mod.rs  parse.rs  resolve.rs  slice_iter.rs
src/parse/: ast.rs  specifier_list.rs
src/semantics/: ast.rs  check_labels.rs  label_loops.rs  mod.rs  resolve.rs  resolve_loops.rs  switch_cases.rs  typecheck.rs
src/types/: ast.rs  symbol_table.rs
symtab/: Cargo.toml
symtab/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs  slice_iter.rs  var_map.rs
(+14 files in other folders)
