[package]
name = "mcc"
version = "0.1.0"
edition = "2024"

[dependencies]
 ast = {path="../ast"}
 util = {path="../util"}
 symtab = {path="../symtab"}
 asm = {path="../asm"}
 thiserror = "2.0.12"

[features]
default = ["codegen"]
lex = []
parse = ["lex"]
semantics = ["parse"]
codegen = ["semantics"]

